# create-slideshow

./: .gitignore  README.md  make_slideshow.py  pyproject.toml  slideshow_template.html
