[project]
name = "weddig"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
make-slideshow = "make_slideshow:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pylint.master]
ignore = ".venv"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["C0114", "C0116"]