[project]
name = "weddig"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
make-slideshow = "make_slideshow:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S603",   # subprocess call with untrusted input, commands are hardcoded
    "S310",   # urllib open, URL is hardcoded (Nominatim)
    "S607",   # partial executable path, exiftool/sips are system tools
    "DTZ001", # naive datetime, EXIF dates have no timezone by definition
    "DTZ007", # naive datetime strptime (same reason)
]

[tool.pylint.master]
ignore = ".venv"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["C0114", "C0116"]